# spotifystats

./: Cargo.toml
src/: app.rs  app2.rs  client.rs  main.rs
src/app/: client.rs
